syntax = "proto3";
package gitopia.gitopia.rewards;

import "gogoproto/gogo.proto";
import "rewards/pool.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/gitopia/gitopia/v4/x/rewards/types";

// a map from recipient to all her rewards
message Reward {
  string recipient = 1;
  repeated RecipientReward rewards= 2;
}

message RecipientReward {
  Series series = 1;
  cosmos.base.v1beta1.Coin amount = 2
    [(gogoproto.nullable) = false, 
    (gogoproto.castkey) = "github.com/cosmos/cosmos-sdk/types.Coin"]; 
  string creator = 3;
  cosmos.base.v1beta1.Coin claimed_amount = 4
    [(gogoproto.nullable) = false, 
    (gogoproto.castkey) = "github.com/cosmos/cosmos-sdk/types.Coin"];
  cosmos.base.v1beta1.Coin claimed_amount_with_decay = 5
    [(gogoproto.nullable) = false, 
    (gogoproto.castkey) = "github.com/cosmos/cosmos-sdk/types.Coin"]; 
}
